Fixed bug with overflow of dropdowns in chrome

--- a/widgets/assets/DetailView.less
+++ b/widgets/assets/DetailView.less
@@ -6,6 +6,7 @@
     .kv-detail-view {
       overflow: visible;
       .table {
+        overflow: visible;
         margin-bottom: 0;
       }
     }
